--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <header class="header">
         <img class="logo" src="./images/header-logo.svg" alt="логотип">
         <div class="header__lang-links">
-            <a href="#" class="header__lang-link header__lang-link_decoration_underline">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_decoration_active">Ru</a>
             <a href="#" class="header__lang-link">En</a>
         </div> 
     </header>
     <main class="content">
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img class="lead__image" src="./images/lead-polka.jpg" alt="Верхняя полка">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-            <h1 class="intro__title">Чего мы там не видели?</h1>
+            <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li>Часовых поясов 11</li>
-                <li>Объектов природного наследия ЮНЕСКО 12</li>
-                <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                <li>Природных заповедников 105</li>
-                <li>Аэропортов 241</li>
+                <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+                <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+                <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+                <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+                <li>Аэропортов <span class="intro__span-accent">241</span></li>
             </ul>
         </section>
         <section class="photo-grid" aria-label="gallery">
@@ -112,20 +112,20 @@
         </section>
         <section class="cover">
             <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-              <h1 class="cover__title" >До Байкала «на собаках»</h1>
+              <h2 class="cover__title" >До Байкала «на собаках»</h2>
               <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
         </section>
     </main>
     <footer class="footer">
-            <div class="footer__links">
+            <nav class="footer__links">
                 <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
                 <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
                 <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
                 <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
                 <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-            </div>
-            <div class="footer__copyright">&copy; 2023. Виктория Усатая</div>
+            </nav>
+            <p class="footer__copyright">&copy; 2023. Виктория Усатая</p>
     </footer>
 </body>
 </html>
